--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "eslint": "^3.2.2",
     "mocha": "^3.0.0",
     "preact": "^8.1.0",
-    "pretty-format": "^3.5.1",
     "rollup": "^0.34.3",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-commonjs": "^3.3.1",
@@ -56,5 +55,8 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0"
+  },
+  "dependencies": {
+    "pretty-format": "^20.0.3"
   }
 }
